--- a/html/alert.html
+++ b/html/alert.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alert - Dangerous was blocked!</title>
+    <title>Alert - Dangerous website was blocked!</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <style>
       * {
