Bring back Notes for blocked domains

--- a/html/alert.html
+++ b/html/alert.html
@@ -113,7 +113,9 @@
         as this may harm your computer.
       </p>
       <div class="details">
-        <p>Blocked: <b id="domain"></b>, for <b id="reason"></b></p>
+        <p>Blocked: <b id="domain"></b></p>
+        <p>Reason: <b id="reason"></b></p>
+        <p>Notes: <b id="notes"></b></p>
       </div>
       <div class="actions">
         <button class="btn secondary" id="ignore">Accept the risk</button>
