Update API URL & Bringed back 'site.path'

--- a/html/alert.html
+++ b/html/alert.html
@@ -21,6 +21,7 @@
         color: #fff;
         font-family: system-ui;
         height: 100dvh;
+        font-size: 1em;
       }
 
       section {
@@ -113,7 +114,7 @@
         as this may harm your computer.
       </p>
       <div class="details">
-        <p>Blocked: <b id="domain"></b></p>
+        <p>Blocked: <b id="domain"></b><b id="path"></b></p>
         <p>Reason: <b id="reason"></b></p>
         <p>Notes: <b id="notes"></b></p>
       </div>
