Use new version format [MAJOR.MINOR.SUBMINOR], Add support for light theme

--- a/html/alert.html
+++ b/html/alert.html
@@ -24,6 +24,17 @@
         font-size: 1em;
       }
 
+      @media (prefers-color-scheme: light) {
+        body {
+          background: #fff;
+          color: #0f0f0f;
+        }
+
+        .btn {
+          color: #0f0f0f !important;
+        }
+      }
+
       section {
         display: flex;
         flex-direction: column;
