fix: now compatible with new translation system

--- a/html/alert.html
+++ b/html/alert.html
@@ -127,9 +127,9 @@
           <path d="M12 9v4" />
           <path d="M12 17h.01" />
         </svg>
-        <div id="translated-alert">Alert</div>
+        <div translate-key="translated-alert">Alert</div>
       </h1>
-      <p id="translated-description">
+      <p translate-key="translated-description">
         The website that you have tried to visit was blocked by
         <b>StopMalwareContent</b> because it was found in our list and was
         flagged as harmful or potentionally unwanted. Continue at your own risk
@@ -137,23 +137,23 @@
       </p>
       <div class="details">
         <p>
-          <span id="translated-blocked">Blocked:</span> <b id="domain"></b
+          <span translate-key="translated-blocked">Blocked:</span> <b id="domain"></b
           ><b id="path"></b>
         </p>
-        <p><span id="translated-reason">Reason:</span> <b id="reason"></b></p>
-        <p><span id="translated-notes">Notes:</span> <b id="notes"></b></p>
+        <p><span translate-key="translated-reason">Reason:</span> <b id="reason"></b></p>
+        <p><span translate-key="translated-notes">Notes:</span> <b id="notes"></b></p>
       </div>
       <div class="actions">
-        <button class="btn secondary" id="ignore" tabindex="2">
+        <button class="btn secondary" translate-key="ignore" tabindex="2">
           Accept the risk
         </button>
-        <button class="btn primary" id="back" tabindex="1">
+        <button class="btn primary" translate-key="back" tabindex="1">
           Back to safety
         </button>
       </div>
       <div class="footer">
-        <p class="secondary" id="was-this-an-error">Was this an error?</p>
-        <a href="https://github.com/StopMalwareContent/Extension/issues/new/choose" id="report-a-false-positive">Report a false positive.</a>
+        <p class="secondary" translate-key="was_this_an_error">Was this an error?</p>
+        <a href="https://github.com/StopMalwareContent/Extension/issues/new/choose" translate-key="report_a_false_positive">Report a false positive.</a>
       </div>
     </section>
     <script src="alert.js"></script>
