--- a/html/alert.html
+++ b/html/alert.html
@@ -84,6 +84,17 @@
         border: 1px var(--primary) solid;
       }
 
+      .footer {
+        display: flex;
+        color: #ccc;
+        gap: 0.3em;
+      }
+
+      .footer a {
+        color: #fff;
+        text-decoration: none;
+      }
+
       .btn:hover {
         opacity: 0.8;
       }
@@ -153,6 +164,10 @@
         >
           Back to safety
         </button>
+      </div>
+      <div class="footer">
+        <p class="secondary" translate-key="was_this_an_error">Was this an error?</p>
+        <a href="https://github.com/StopMalwareContent/Extension/issues/new/choose" translate-key="report_a_false_positive">Report a false positive.</a>
       </div>
     </section>
     <script src="alert.js"></script>
