Add target: blank to report false-positive button & Increment version

--- a/html/alert.html
+++ b/html/alert.html
@@ -166,8 +166,15 @@
         </button>
       </div>
       <div class="footer">
-        <p class="secondary" translate-key="was_this_an_error">Was this an error?</p>
-        <a href="https://github.com/StopMalwareContent/Extension/issues/new/choose" translate-key="report_a_false_positive">Report a false positive.</a>
+        <p class="secondary" translate-key="was_this_an_error">
+          Was this an error?
+        </p>
+        <a
+          href="https://github.com/StopMalwareContent/Site-Tracker/issues/new/choose"
+          translate-key="report_a_false_positive"
+          target="_blank"
+          >Report a false positive.</a
+        >
       </div>
     </section>
     <script src="alert.js"></script>
