Fix footer in light theme

--- a/html/alert.html
+++ b/html/alert.html
@@ -37,6 +37,16 @@
         .btn {
           color: #0f0f0f !important;
         }
+
+        .footer {
+          display: flex;
+          color: inherit !important;
+          gap: 0.3em;
+        }
+
+        .footer a {
+          color: inherit !important;
+        }
       }
 
       section {
@@ -92,7 +102,7 @@
 
       .footer a {
         color: #fff;
-        text-decoration: none;
+        text-decoration: underline;
       }
 
       .btn:hover {
