Update alert page design

--- a/html/alert.html
+++ b/html/alert.html
@@ -71,8 +71,9 @@
       }
 
       .details {
-        border: 1px solid var(--primary);
         padding: 1em;
+        border: 1px solid var(--primary);
+        border-radius: 4px;
       }
 
       .btn {
@@ -80,6 +81,7 @@
         padding: 0.5em 1em;
         cursor: pointer;
         border: 1px solid transparent;
+        border-radius: 2px;
       }
 
       .btn.primary {
@@ -180,7 +182,7 @@
           Was this an error?
         </p>
         <a
-          href="https://github.com/StopMalwareContent/Site-Tracker/issues/new/choose"
+          href="https://smc-dashboard.pages.dev/report"
           translate-key="report_a_false_positive"
           target="_blank"
           >Report a false positive.</a
